--- a/settings.json
+++ b/settings.json
@@ -1,44 +1,52 @@
 
 {
-    "editor.lineNumbers": "relative",
+    "workbench.startupEditor": "newUntitledFile",
+    //"editor.fontFamily": "JetBrainsMono NF",
     "editor.fontFamily": "FiraCode NF",
-    // "editor.fontFamily": "Iosevka",
-    "javascript.updateImportsOnFileMove.enabled": "always",
-    "workbench.startupEditor": "none",
-    "editor.fontSize": 14,
-    "editor.fontLigatures": true,
+    //"editor.fontFamily": "Iosevka",
+    "editor.fontSize": 16,
     "editor.lineHeight": 17,
-    "editor.letterSpacing": 0,
+    "editor.letterSpacing": 0.7,
     "files.trimTrailingWhitespace": true,
-    "editor.fontWeight": "500",
+    "editor.fontWeight": "400",
     "editor.cursorStyle": "line",
-    "editor.cursorWidth": 2,
-    "editor.acceptSuggestionOnEnter": "on",
+    "editor.cursorWidth": 3,
     "editor.cursorBlinking": "solid",
     "editor.renderWhitespace": "trailing",
     "editor.tabSize": 4,
-    "editor.acceptSuggestionOnCommitCharacter": false,
-    "editor.guides.indentation": true,
-    "editor.bracketPairColorization.enabled": true,
-    "php.validate.executablePath": "/usr/bin/php7",
-    "solidity.enabledAsYouTypeCompilationErrorCheck": false,
-    "thunder-client.codeSnippetLanguage": "cs-httpclient",
-    "workbench.productIconTheme": "material-product-icons",
     "editor.tokenColorCustomizations": {
-
-        "variables": "#fcfcfc",
-       "[Visual Gruvbox (Medium Dark)]": {
+        "[Visual Gruvbox (Medium Dark)]": {
             "functions": "#8ec07c",
             "types": "#fabd2f",
             "keywords": "#f57878",
             "strings": "#b8bb26",
         },
         "[Gruvbox]": {
-            "strings": "#8ec07c",
-            "types": "#fabd2f",
+            "strings": "#b8bb26",//"#8ec07c",
+            "variables": "#83a598",//"#fabd2f",
             "keywords": "#f57878",
             "functions": "#b8bb26",
-            "variables": "#83a598"
+            "types": "#fabd2f",
+            "textMateRules": [
+                {
+                    "scope": "keyword.control",
+                    "settings": {
+                        "foreground": "#f57878"
+                    }
+                },
+                {
+                    "scope": "keyword.operator",
+                    "settings": {
+                        "foreground": "#fbf1c7"
+                    }
+                },
+                {
+                    "scope": "support.type.property-name",
+                    "settings": {
+                        "foreground": "#fbf1c7"
+                    }
+                }
+            ]
         },
         "[Another Gruvbox Theme]": {
             "strings": "#8ec07c",
@@ -52,77 +60,34 @@
             "keywords": "#f57878",
             "functions": "#b8bb26",
             "variables": "#83a598"
-        },
-        "[Gruvbox Dark (Medium)]": {
-            "strings": "#8ec07c",
-            "types": "#fabd2f",
-            "functions": "#b8bb26",
-            "keywords": "#fe8019",
-            "textMateRules": [
-                {
-                    "scope": "variable.language",
-                    "settings": {
-                        "fontStyle": "bold",
-                        "foreground": "#83a598"
-                    }
-                },
-                {
-                    "scope": "keyword.control",
-                    "settings": {
-                        "foreground": "#e96a5c",
-                        "fontStyle": "bold"
-                    }
-                },
-                {
-                    "scope": "entity.other.attribute-name",
-                    "settings": {
-                        "fontStyle": "bold",
-                    }
-                },
-            ]
-        },
-
-    },
-    "typescript.updateImportsOnFileMove.enabled": "always",
-    "extensions.ignoreRecommendations": true,
-    "window.zoomLevel": 1,
-    "intelephense.diagnostics.undefinedMethods": false,
-    "intelephense.diagnostics.undefinedFunctions": false,
-    "intelephense.diagnostics.undefinedClassConstants": false,
-    "intelephense.diagnostics.undefinedTypes": false,
-    "workbench.iconTheme": "vscode-icons",
-    "editor.semanticHighlighting.enabled": false,
-    "workbench.colorCustomizations": {
-        "statusBar.background": "#1d2021", //"#1d2021",
-        "editor.background": "#1d2021",
-        "sideBar.background": "#1d2021",
-        "sideBar.foreground": "#dcdcdc",
-        "editorLineNumber.foreground": "#dcdcdc",
-        "sideBarSectionHeader.background": "#1d2021",
-        "minimap.background": "#1d2021",
-        "tab.activeBorder": "#dcdcdc",
-        "editorGutter.background": "#1d2021",
-        "terminal.background": "#1d2021",
-        "tab.inactiveForeground": "#dcdcdc",
-        "tab.inactiveBackground": "#1d2021",
-        "[Gruvbox]": {
-            "editorLineNumber.activeForeground": "#fabd2f",
-            "editorBracketHighlight.foreground1": "#e96a5c",
-            "editorBracketHighlight.foreground2": "#e96a5c",
-            "editorBracketHighlight.foreground3": "#e96a5c",
-            "editorBracketHighlight.foreground4": "#e96a5c",
-            "editorBracketHighlight.foreground5": "#e96a5c",
-        },
-        "[Gruvbox Dark (Medium)]": {
-            "editorLineNumber.activeForeground": "#fabd2f",
-            "editorBracketHighlight.foreground1": "#e96a5c",
-            "editorBracketHighlight.foreground2": "#e96a5c",
-            "editorBracketHighlight.foreground3": "#e96a5c",
-            "editorBracketHighlight.foreground4": "#e96a5c",
-            "editorBracketHighlight.foreground5": "#e96a5c",
         }
-
-
     },
-    "workbench.colorTheme": "Gruvbox Dark (Medium)"
+    "editor.semanticTokenColorCustomizations": {
+        "enabled": false,
+    },
+    "editor.guides.indentation": true,
+    "editor.lineNumbers": "relative",
+    "editor.fontLigatures": true,
+    "editor.bracketPairColorization.enabled": true,
+    "rust-analyzer.inlayHints.typeHints.enable": false,
+    "rust-analyzer.inlayHints.chainingHints.enable": false,
+    "rust-analyzer.inlayHints.parameterHints.enable": false,
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorCustomizations": {
+        "editorLineNumber.activeForeground": "#fabd2f",
+        "editor.background": "#282828",
+        "editorBracketHighlight.foreground1": "#fabd2f",
+        "editorBracketHighlight.foreground2": "#fabd2f",
+        "editorBracketHighlight.foreground3": "#fabd2f",
+        "editorBracketHighlight.foreground4": "#fabd2f",
+        "editorBracketHighlight.foreground5": "#fabd2f",//"#fe8019",
+        "sideBar.background": "#282828",
+        "statusBar.background": "#1d2021",
+        "tab.activeForeground": "#dcdcdc",
+        "tab.inactiveForeground": "#dcdcdc",
+        "sideBar.foreground": "#dcdcdc",
+        "editorLineNumber.foreground": "#dcdcdc"
+    },
+    "workbench.sideBar.location": "right",
+    "workbench.colorTheme": "Gruvbox"
 }
